// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bot: FREE installation event insufficient permissions 1`] = `
Object {
  "body": "# Insufficient permissions

Hi there,
Thank you for installing LabelSync. We have noticed that your configuration stretches beyond repositories we can access. We assume that you forgot to allow access to certain repositories.

Please update your installation. 

_Missing repositories:_
 * unchanged

Best,
LabelSync Team",
  "title": "LabelSync - Insufficient permissions",
}
`;

exports[`bot: FREE installation event sync 1`] = `
Array [
  Object {
    "body": Object {
      "color": "000000",
      "name": "alias/new",
    },
    "uri": "/repos/maticzav/changed/labels/alias/old:1",
  },
  Object {
    "body": Object {
      "color": "ffffff",
      "name": "update/color",
    },
    "uri": "/repos/maticzav/changed/labels/update/color",
  },
]
`;

exports[`bot: FREE installation event sync 2`] = `
Array [
  "/repos/maticzav/changed/labels/alias/old:2",
  "/repos/maticzav/changed/labels/remove",
]
`;

exports[`bot: FREE installation invalid config issue 1`] = `
Object {
  "body": "# Welcome to LabelSync!

Hi there,
Thank you for using LabelSync. We hope you enjoyed the experience so far.
It seems like there are some problems with your configuration.
Our parser reported that:

\\\\\`\\\\\`\\\\\`
Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }
\\\\\`\\\\\`\\\\\`

Let us know if we can help you with the configuration by sending us an email to support@label-sync.com. We'll try to get back to you as quickly as possible.

Best,
LabelSync Team",
  "title": "LabelSync - Onboarding configuration",
}
`;

exports[`bot: FREE issues.labeled adds siblings 1`] = `
Array [
  "label/regular",
]
`;

exports[`bot: FREE pull_request 1`] = `
Object {
  "body": "## LabelSync Overview 

### \`changed\`

__New labels:__
 * create/new

__Changed labels:__
 * alias/old:1 => alias/new
 * update/color

__Aliased labels:__
 * alias/old:2 => alias/new

__Removed labels:__
 * alias/old:2
 * remove
---
### \`unchanged\`

__New labels:__
No new labels created.

__Changed labels:__
No changed labels.

__Aliased labels:__
No aliases.

__Unconfigured labels.__
You have no unconfigured labels - you could make this repository \`strict\`.",
}
`;

exports[`bot: FREE pull_request with insufficient permissions 1`] = `
Object {
  "body": "It seems like this configuration stretches beyond repositories we can access. Please update it so we can help you as best as we can.

_Missing repositories:_
 * unchanged",
}
`;

exports[`bot: FREE push event 1`] = `
Object {
  "body": "## LabelSync Overview 

### \`changed\`

__New labels:__
 * create/new

__Changed labels:__
 * alias/old:1 => alias/new
 * update/color

__Aliased labels:__
 * alias/old:2 => alias/new

__Removed labels:__
 * alias/old:2
 * remove
---
### \`unchanged\`

__New labels:__
No new labels created.

__Changed labels:__
No changed labels.

__Aliased labels:__
No aliases.

__Unconfigured labels.__
You have no unconfigured labels - you could make this repository \`strict\`.",
}
`;

exports[`bot: FREE push event 2`] = `
Array [
  Object {
    "body": Object {
      "color": "000000",
      "name": "alias/new",
    },
    "uri": "/repos/maticzav/changed/labels/alias/old:1",
  },
  Object {
    "body": Object {
      "color": "ffffff",
      "name": "update/color",
    },
    "uri": "/repos/maticzav/changed/labels/update/color",
  },
]
`;

exports[`bot: FREE push event 3`] = `
Array [
  "/repos/maticzav/changed/labels/alias/old:2",
  "/repos/maticzav/changed/labels/remove",
]
`;

exports[`bot: FREE push event 4`] = `
Array [
  Object {
    "body": Array [
      "alias/new",
    ],
    "uri": "/repos/maticzav/changed/issues/1/labels",
  },
  Object {
    "body": Array [
      "alias/new",
    ],
    "uri": "/repos/maticzav/changed/issues/4/labels",
  },
]
`;

exports[`bot: FREE push event invalid configuration 1`] = `
Object {
  "body": "It seems like your configuration uses a format unknown to me. 
That might be a consequence of invalid yaml cofiguration file. 

Here's what I am having problems with:

\\\\\`\\\\\`\\\\\`
Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }
\\\\\`\\\\\`\\\\\`",
}
`;

exports[`bot: FREE push event with insufficient premissions 1`] = `
Object {
  "body": "Your configuration stretches beyond repositories I can access. 
Please update it so I may sync your labels.

_Missing repositories:_
 * unchanged",
}
`;

exports[`bot: PAID installation event insufficient permissions 1`] = `
Object {
  "body": "# Insufficient permissions

Hi there,
Thank you for installing LabelSync. We have noticed that your configuration stretches beyond repositories we can access. We assume that you forgot to allow access to certain repositories.

Please update your installation. 

_Missing repositories:_
 * unchanged

Best,
LabelSync Team",
  "title": "LabelSync - Insufficient permissions",
}
`;

exports[`bot: PAID installation event sync 1`] = `
Array [
  Object {
    "body": Object {
      "color": "000000",
      "name": "alias/new",
    },
    "uri": "/repos/maticzav/changed/labels/alias/old:1",
  },
  Object {
    "body": Object {
      "color": "ffffff",
      "name": "update/color",
    },
    "uri": "/repos/maticzav/changed/labels/update/color",
  },
]
`;

exports[`bot: PAID installation event sync 2`] = `
Array [
  "/repos/maticzav/changed/labels/alias/old:2",
  "/repos/maticzav/changed/labels/remove",
]
`;

exports[`bot: PAID installation invalid config issue 1`] = `
Object {
  "body": "# Welcome to LabelSync!

Hi there,
Thank you for using LabelSync. We hope you enjoyed the experience so far.
It seems like there are some problems with your configuration.
Our parser reported that:

\\\\\`\\\\\`\\\\\`
Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }
\\\\\`\\\\\`\\\\\`

Let us know if we can help you with the configuration by sending us an email to support@label-sync.com. We'll try to get back to you as quickly as possible.

Best,
LabelSync Team",
  "title": "LabelSync - Onboarding configuration",
}
`;

exports[`bot: PAID issues.labeled adds siblings 1`] = `
Array [
  "label/regular",
]
`;

exports[`bot: PAID pull_request 1`] = `
Object {
  "body": "## LabelSync Overview 

### \`changed\`

__New labels:__
 * create/new

__Changed labels:__
 * alias/old:1 => alias/new
 * update/color

__Aliased labels:__
 * alias/old:2 => alias/new

__Removed labels:__
 * alias/old:2
 * remove
---
### \`unchanged\`

__New labels:__
No new labels created.

__Changed labels:__
No changed labels.

__Aliased labels:__
No aliases.

__Unconfigured labels.__
You have no unconfigured labels - you could make this repository \`strict\`.",
}
`;

exports[`bot: PAID pull_request with insufficient permissions 1`] = `
Object {
  "body": "It seems like this configuration stretches beyond repositories we can access. Please update it so we can help you as best as we can.

_Missing repositories:_
 * unchanged",
}
`;

exports[`bot: PAID push event 1`] = `
Object {
  "body": "## LabelSync Overview 

### \`changed\`

__New labels:__
 * create/new

__Changed labels:__
 * alias/old:1 => alias/new
 * update/color

__Aliased labels:__
 * alias/old:2 => alias/new

__Removed labels:__
 * alias/old:2
 * remove
---
### \`unchanged\`

__New labels:__
No new labels created.

__Changed labels:__
No changed labels.

__Aliased labels:__
No aliases.

__Unconfigured labels.__
You have no unconfigured labels - you could make this repository \`strict\`.",
}
`;

exports[`bot: PAID push event 2`] = `
Array [
  Object {
    "body": Object {
      "color": "000000",
      "name": "alias/new",
    },
    "uri": "/repos/maticzav/changed/labels/alias/old:1",
  },
  Object {
    "body": Object {
      "color": "ffffff",
      "name": "update/color",
    },
    "uri": "/repos/maticzav/changed/labels/update/color",
  },
]
`;

exports[`bot: PAID push event 3`] = `
Array [
  "/repos/maticzav/changed/labels/alias/old:2",
  "/repos/maticzav/changed/labels/remove",
]
`;

exports[`bot: PAID push event 4`] = `
Array [
  Object {
    "body": Array [
      "alias/new",
    ],
    "uri": "/repos/maticzav/changed/issues/1/labels",
  },
  Object {
    "body": Array [
      "alias/new",
    ],
    "uri": "/repos/maticzav/changed/issues/4/labels",
  },
]
`;

exports[`bot: PAID push event invalid configuration 1`] = `
Object {
  "body": "It seems like your configuration uses a format unknown to me. 
That might be a consequence of invalid yaml cofiguration file. 

Here's what I am having problems with:

\\\\\`\\\\\`\\\\\`
Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }
\\\\\`\\\\\`\\\\\`",
}
`;

exports[`bot: PAID push event with insufficient premissions 1`] = `
Object {
  "body": "Your configuration stretches beyond repositories I can access. 
Please update it so I may sync your labels.

_Missing repositories:_
 * unchanged",
}
`;
